<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:title="@string/appearance"
        app:iconSpaceReserved="false">

        <ListPreference
            android:key="theme_mode"
            android:title="@string/theme_preference_title"
            android:summary="@string/theme_preference_summary"
            android:entries="@array/theme_entries"
            android:entryValues="@array/theme_values"
            android:defaultValue="system"
            app:iconSpaceReserved="false" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/about"
        app:iconSpaceReserved="false">

        <Preference
            android:key="app_version"
            android:title="@string/app_version"
            android:summary="@string/app_name"
            android:selectable="false"
            app:iconSpaceReserved="false" />

    </PreferenceCategory>

</PreferenceScreen>
