<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    
    <item
        android:id="@+id/action_open_in_browser"
        android:title="@string/open_in_browser"
        android:icon="@drawable/ic_open_in_browser_24"
        app:iconTint="@color/colorTextDeep"
        app:showAsAction="ifRoom" />
        
    <item
        android:id="@+id/action_translate"
        android:title="@string/translate"
        android:icon="@drawable/ic_translate_new_24"
        app:iconTint="@color/colorTextDeep"
        app:showAsAction="ifRoom" />
        
    <item
        android:id="@+id/action_share"
        android:title="@string/share"
        android:icon="@drawable/ic_share_24"
        app:iconTint="@color/colorTextDeep"
        app:showAsAction="ifRoom" />
        
</menu>
