<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/bottom_line"
        >
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="14dp"
            android:contentDescription="@null"
            android:id="@+id/close_iv"
            android:layout_centerVertical="true"
            android:src="@drawable/icon_popup_close_default"
            app:tint="@color/colorTextDeep" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textColor="@color/colorTextDeep"
            android:text="@string/sort_by"
            android:textSize="@dimen/medium_txt"
            />
    </RelativeLayout>
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="21dp"
        android:id="@+id/rate_rg"
        android:paddingHorizontal="18dp"
        >
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_order"
            android:checked="true"
            android:id="@+id/default_rb"
            android:background="@color/transparent"
            android:textSize="@dimen/medium_txt"
            />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/significance_descending"
            android:background="@color/transparent"
            android:id="@+id/big_rb"
            android:layout_marginTop="10dp"
            android:textSize="@dimen/medium_txt"
            />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/significance_ascending"
            android:background="@color/transparent"
            android:layout_marginTop="10dp"
            android:id="@+id/small_rb"
            android:textSize="@dimen/medium_txt"
            />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/latest"
            android:layout_marginTop="10dp"
            android:id="@+id/now_rb"
            android:background="@color/transparent"
            android:textSize="@dimen/medium_txt"
            />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/earliest"
            android:layout_marginTop="10dp"
            android:id="@+id/before_rb"
            android:background="@color/transparent"
            android:textSize="@dimen/medium_txt"
            />
    </RadioGroup>
    <com.hjq.shape.view.ShapeButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:shape_solidColor="@color/main_color"
        android:paddingVertical="10dp"
        app:shape_radius="6dp"
        android:gravity="center"
        android:layout_marginBottom="10dp"
        android:text="@string/confirm"
        android:layout_marginHorizontal="18dp"
        android:id="@+id/yes_btn"
        android:textSize="@dimen/medium_txt"
        android:textColor="@color/white"
        android:layout_marginTop="14dp"
        />
</LinearLayout>