<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/bottom_line">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/personalization_sorted_articles"
            android:textColor="@color/colorTextDeep"
            android:textSize="@dimen/medium_txt"/>
        <ImageView
            android:id="@+id/close_iv"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="14dp"
            android:src="@drawable/icon_popup_close_default"
            app:tint="@color/colorTextDeep"/>
    </RelativeLayout>

    <RadioGroup
        android:id="@+id/sort_rg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="18dp"
        android:paddingTop="14dp">
        <RadioButton
            android:id="@+id/sort_default"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/default_order"
            android:textSize="@dimen/medium_txt"/>
        <RadioButton
            android:id="@+id/sort_significance_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/significance_descending"
            android:textSize="@dimen/medium_txt"/>
        <RadioButton
            android:id="@+id/sort_significance_asc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/significance_ascending"
            android:textSize="@dimen/medium_txt"/>
        <RadioButton
            android:id="@+id/sort_latest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/latest"
            android:textSize="@dimen/medium_txt"/>
        <RadioButton
            android:id="@+id/sort_earliest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/earliest"
            android:textSize="@dimen/medium_txt"/>
    </RadioGroup>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginVertical="12dp"
        android:background="@color/divider_color"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingHorizontal="18dp"
        android:paddingBottom="14dp">
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/ic_person_add"
            android:tint="@color/main_color"/>
        <TextView
            android:id="@+id/manage_topics_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/manage_topics"
            android:textColor="@color/colorTextDeep"
            android:textSize="15sp"/>
        <TextView
            android:id="@+id/topic_count_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:paddingHorizontal="8dp"
            android:paddingVertical="2dp"
            android:textColor="@color/main_color"
            android:background="@drawable/publisher_bias_tag_background"
            android:text="0"/>
    </LinearLayout>

</LinearLayout>


